[package]
name = "asura"
version = "0.1.0"
edition = "2024"




[dependencies]
bollard = "0.21.0"
chrono = "0.4.45"
clap = {version ="4.6.1", features = ["derive"]}
kore = "1.0.1"
libc = "0.2.186"
nix = "0.31.3"
owo-colors = "4.3.0"
service-manager = "0.11.0"
signal-hook = "0.4.4"
sysinfo = "0.39.3"
tokio = { version = "1.52.3", features = ["full"] }
which = "8.0.4"
